Add functionality to serve basic handlebars page

--- a/server/views/app.handlebars
+++ b/server/views/app.handlebars
@@ -1,8 +1,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <title>{{title}}</title>
 </head>
 <body>
-    
+    This is the app page with the title: "{{title}}".
 </body>
 </html>
