Update boilerplate base homepage

--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -1,9 +1,20 @@
 <html lang="en">
 <head>
+    <!-- META -->
     <meta charset="utf-8" />
+    <meta name="description" content="Make polls. Make decisions." />
+    <meta name="keywords" content="Polls" />
+    <meta name="author" content="Ian Effendi" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pollr</title>
+
+     <!-- FAVICON + STYLESHEETS -->
     <link rel="shortcut icon" href="/assets/img/favicon.png" />
+    <link rel="stylesheet" href="https://use.typekit.net/jif8tkh.css">
     <link rel="stylesheet" type="text/css" href="/assets/style.css" />
+
+    <!-- SITE-WIDE SCRIPTS -->
+    <!-- nothing so far -->
 </head>
 <body>
     {{{body}}}
