--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -4,14 +4,13 @@
 <body>
     {{> header}}
     <main id="content">
-        <div class="content-left">
+        <div class="content-main hero-main">
             <p class="hero-caption">
-                YOUR FRIENDS STILL CAN'T DECIDE ON WHAT TO WATCH?  
+                <span class="hero-caption-text">YOUR FRIENDS STILL<br/> CAN'T DECIDE ON<br/> WHAT TO WATCH?</span>
             </p>
-            <button class="call-to-action">MAKE A POLL</button>
+            <a class="call-to-action" href="#">MAKE A POLL</a>
         </div>
-        <div class="content-right">
-            <img class="hero-image" src="/assets/img/zombieing.svg" alt="Zombieing vector image from OpenDoodles." />
+        <div class="content-background">            
         </div>
     </main>
     {{> footer}}
