--- a/server/views/partials/footer.handlebars
+++ b/server/views/partials/footer.handlebars
@@ -5,8 +5,8 @@
         </div>
         <div class="footer-right">
             <ul class="footer-links">
-                <li class="footer-link"><a class="footer-link-style" href="#" title="About">ABOUT</a></li>
-                <li class="footer-link"><a class="footer-link-style" href="#" title="Contact">CONTACT</a></li>
+                <li class="footer-link"><a class="footer-link-style" href="/about" title="About">ABOUT</a></li>
+                <li class="footer-link"><a class="footer-link-style" href="/contact" title="Contact">CONTACT</a></li>
             </ul>
         </div>
     </div>
