--- a/server/views/partials/header.handlebars
+++ b/server/views/partials/header.handlebars
@@ -5,9 +5,9 @@
         </div>    
         <div class="navbar-right">
             <ul class="navbar-links">
-                <li class="navbar-link"><a class="navbar-link-style" href="#">PRICING</a></li>
-                <li class="navbar-link"><a class="navbar-link-style" href="#">LOGIN</a></li>
-                <li class="navbar-link"><a class="navbar-link-style" href="#">SIGNUP</a></li>
+                <li class="navbar-link"><a class="navbar-link-style" href="/pricing">PRICING</a></li>
+                <li class="navbar-link"><a class="navbar-link-style" href="/login">LOGIN</a></li>
+                <li class="navbar-link"><a class="navbar-link-style" href="/signup">SIGNUP</a></li>
             </ul>
         </div>
     </div>
