Add webpack configuration for React jsx files

--- a/server/views/app.handlebars
+++ b/server/views/app.handlebars
@@ -1,8 +1,14 @@
 <html lang="en">
 <head>
-    <title>{{title}}</title>
 </head>
 <body>
-    This is the app page with the title: "{{title}}".
+    {{> header}}
+    <main id="content">
+        <section id="sidebar">
+        </section>
+        <section id="polls">            
+        </section>
+    </main>
+    {{> footer}}
 </body>
 </html>
