--- a/server/views/layouts/react.handlebars
+++ b/server/views/layouts/react.handlebars
@@ -13,15 +13,17 @@
     <link rel="stylesheet" href="https://use.typekit.net/jif8tkh.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
     {{#each css}}
-        <link rel="stylesheet" type="text/css" href="/assets/css/{{this}}.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/{{this}}.css" />
     {{/each}}
 
     <!-- SITE-WIDE SCRIPTS -->
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script crossorigin src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
-    <script src="/assets/js/main.bundle.js"></script>
     <script src="/assets/js/util.bundle.js"></script>
+    {{#each scripts}}
+    <script src="/assets/js/{{this}}.bundle.js"></script>
+    {{/each}}
 </head>
 <body>
     {{{body}}}
