--- a/server/views/partials/includes/header.handlebars
+++ b/server/views/partials/includes/header.handlebars
@@ -1,3 +1,5 @@
+{{!-- includes/header.handlebars --}}
+
 <nav>
     <div class="navbar">
         <div class="navbar-left">
@@ -5,10 +7,21 @@
         </div>    
         <div class="navbar-right">
             <ul class="navbar-links">
+                {{#each navbarLinks}}
+                {{!-- 
                 <li class="navbar-link"><a class="navbar-link-style" href="/pricing">PRICING</a></li>
                 <li class="navbar-link"><a class="navbar-link-style" href="/login">LOGIN</a></li>
                 <li class="navbar-link"><a class="navbar-link-style" href="/signup">SIGNUP</a></li>
+                --}}
+                <li class="navbar-link"><a class="navbar-link-style" href={{this.href}}>{{this.title}}</a></li>
+                {{/each}}
             </ul>
         </div>
     </div>
+
+    {{#> notification-bar}}
+        {{!-- Customizable notification bar. --}}
+        {{> includes/notifications}}
+    {{/notification-bar}}
+
 </nav>
