--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
                 {{> includes/header}}
         </header>
 
-        <main id="content">
+        <main id="main">
                 {{!-- Main page content goes here. --}}
                 {{{block 'main'}}}
         </main>
