--- a/server/views/partials/includes/notifications.handlebars
+++ b/server/views/partials/includes/notifications.handlebars
@@ -1,5 +1,5 @@
 {{!-- includes/notifications.handlebars --}}
 
 <div class="notification-bar">
-    <div id="notification" class="notification">Message</div>
+    <div id="notifications" class="notification">Message</div>
 </div>
