--- a/server/views/pages/home.handlebars
+++ b/server/views/pages/home.handlebars
@@ -1,25 +1,29 @@
 {{!-- pages/home.handlebars --}}
-
 {{!-- Use the main layout --}}
 {{#> layouts/main title="Pollr | Home" }}
-
     {{!-- Add in the meta, styles, and head scripts --}}
     {{#extend "meta-content"}}
         {{> includes/meta}}
-    {{/extend}}
-    
+    {{/extend}}    
+    {{!-- Add in the meta, styles, and head scripts --}} 
     {{#extend "head-styles"}}
         {{> includes/styles}}
-        {{> style bundle="home" }}
-    {{/extend}}
-    
+        {{> style bundle="home"}}
+    {{/extend}}    
+    {{!-- Add in the meta, styles, and head scripts --}}
     {{#extend "head-scripts"}}
         {{> includes/scripts}}
     {{/extend}}
-
+    {{!-- Provide this page's header --}}
+    {{#extend "header"}}
+        {{> includes/header}}
+    {{/extend}}
     {{!-- Overwrite the main content --}}
     {{#extend "main"}}
         {{> includes/hero }}        
+    {{/extend}}    
+    {{!-- Provide this page's footer --}}
+    {{#extend "footer"}}
+        {{> includes/footer}}
     {{/extend}}
-    
 {{/layouts/main}}
