Add bootstrap styles and update handlebars

--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -12,14 +12,14 @@
         {{!-- Extend with header content --}}
         {{{block 'header'}}}
         </header>
-        <main id="main" class="container-md" >
+        <main id="main" class="container-md my-5" >
         {{!-- Extend with the main page content --}}
         {{{block 'main'}}}
         </main>
-        <footer>
+        <footer class="container-fluid" >
         {{!-- Extend with footer content --}}
         {{{block 'footer'}}}
-        </footer class="container-md" >
+        </footer>
         {{!-- Extend with scripts at the foot of the page --}}
         {{{block 'body-scripts'}}}
 </body>
