--- a/server/views/partials/includes/hero.handlebars
+++ b/server/views/partials/includes/hero.handlebars
@@ -1,9 +1,12 @@
 {{!-- includes/hero.handlebars --}}
-<div class="content-main hero-main">
-    <p class="hero-caption">
-        <span class="hero-caption-text">YOUR FRIENDS STILL<br/> CAN'T DECIDE ON<br/> WHAT TO WATCH?</span>
-    </p>
-    <a class="call-to-action" href="/dashboard">MAKE A POLL</a>
+<div class="container">
+    <div class="jumbotron mx-auto w-75">
+        <p class="hero-caption">
+            <span class="hero-caption-text">YOUR FRIENDS STILL<br/> CAN'T DECIDE ON<br/> WHAT TO WATCH?</span>
+        </p>
+        <button type="button" class="btn btn-primary call-to-action" href="/dashboard">MAKE A POLL</a>
+    </div>
 </div>
-<div class="content-background">            
+<div class="container text-center mx-auto">
+    <p class="text-muted mb-2 bg-transparent">Learn more <a href="/about">about</a> this website.</p>
 </div>
