--- a/server/views/partials/includes/footer.handlebars
+++ b/server/views/partials/includes/footer.handlebars
@@ -1,17 +1,3 @@
 {{!-- includes/footer.handlebars --}}
-<div class="footer">
-    <div class="footer-left">
-        <div class="copyright">© 2020 Ian Effendi</div>
-    </div>
-    <div class="footer-right">
-        <ul class="footer-links">
-            {{#each footerLinks}}
-            {{!--
-            <li class="footer-link"><a class="footer-link-style" href="/about">ABOUT</a></li>
-            <li class="footer-link"><a class="footer-link-style" href="/contact">CONTACT</a></li>
-            --}}
-            <li class="footer-link"><a class="footer-link-style" href={{this.href}}>{{this.title}}</a></li>
-            {{/each}}
-        </ul>
-    </div>
-</div>
+{{> page-footer}}
+{{> fixed-footer}}
