--- a/server/views/partials/includes/notifications.handlebars
+++ b/server/views/partials/includes/notifications.handlebars
@@ -1,5 +1,6 @@
 {{!-- includes/notifications.handlebars --}}
-
-<div class="notification-bar">
-    <div id="notifications" class="notification">Message</div>
+<div class="container">
+    <div class="mx-2 my-2">
+        <div id="notification" class="alert alert-primary d-none" role="alert">Placeholder alert.</div>
+    </div>
 </div>
