--- a/server/views/partials/page-footer.handlebars
+++ b/server/views/partials/page-footer.handlebars
@@ -1,4 +1,4 @@
 {{!-- page-footer.handlebars --}}
-<div style="height: 1px;" class="container mx-auto border-top border-primary d-block d-sm-none">
+<div class="container mx-auto border-top border-primary d-block d-sm-none">
     {{> footer-content}}
 </div>
