Add MediaElement cards and complete boilerplate for the about page

--- a/server/views/pages/about.handlebars
+++ b/server/views/pages/about.handlebars
@@ -36,4 +36,8 @@
     {{#extend "footer"}}
         {{> includes/footer}}
     {{/extend}}
+    {{!-- Add in body scripts --}}
+    {{#extend "body-scripts"}}
+        {{> script bundle="about" }}
+    {{/extend}}
 {{/layouts/main}}
