Update login form

--- a/server/views/partials/includes/notifications.handlebars
+++ b/server/views/partials/includes/notifications.handlebars
@@ -1,6 +1,6 @@
 {{!-- includes/notifications.handlebars --}}
 <div class="container">
-    <div class="mx-2 my-2">
-        <div id="notification" class="alert alert-primary d-none" role="alert">Placeholder alert.</div>
+    <div id="notification" class="mx-2 my-2">
+        <div class="alert alert-primary d-none" role="alert">Placeholder alert.</div>
     </div>
 </div>
