--- a/server/views/partials/form.handlebars
+++ b/server/views/partials/form.handlebars
@@ -1,6 +1,6 @@
 {{!-- form.handlebars --}}
-<div class="container w-50 m-2 my-sm-5 p-3 p-sm-5 mx-auto shadow bg-light">
-  <form id="mainForm" class="">
+<div id="mainForm" class="container w-50 m-2 my-sm-5 p-3 p-sm-5 mx-auto shadow bg-light">
+  <form class="">
     <h1 id="formLabel" class="text-center">Sign In</h1>
     <div class="form-group">
       <label for="username">Username</label>
